<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#f0f0f0f0">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="407dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:translationZ="10dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="#f0f0f0f0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/cost_of_service"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/cost_of_service"
            android:inputType="numberDecimal"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="25dp"
            android:text="@string/how_was_the_service"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="0dp"
        android:layout_height="164dp"
        android:layout_marginTop="8dp"
        android:background="#f0f0f0f0"
        android:checkedButton="@id/option_fifteen_percent"
        android:orientation="vertical"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <RadioButton
            android:id="@+id/option_twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/amazing_20" />

        <RadioButton
            android:id="@+id/option_eighteen_percent"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/good_18" />

        <RadioButton
            android:id="@+id/option_fifteen_percent"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/ok_15"
            android:textColor="@color/black" />

    </RadioGroup>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_round"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:translationZ="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#f0f0f0f0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_options">

        <Switch
            android:id="@+id/round_up_switch"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:checked="true"
            android:text="@string/round_up_tip"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/round_down_switch"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="8dp"
            android:checked="true"
            android:text="@string/round_down_tip"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/card_round"
        app:layout_constraintStart_toStartOf="@+id/card_round"
        app:layout_constraintTop_toBottomOf="@+id/card_round" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_prices"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:translationZ="10dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="#f0f0f0f0"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/calculate_button"
        app:layout_constraintStart_toStartOf="@+id/calculate_button"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button">


        <TextView
            android:id="@+id/costOfServiceText"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:text="Cost of Service: - - - -"
            tools:text="Cost of Service: R$"
            />
        <TextView
            android:id="@+id/tipResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="105dp"
            android:text="Tip Amount: - - - - "
            android:textSize="22sp"
            tools:text="Tip amount: R$" />

        <TextView
            android:id="@+id/finalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp"
            android:layout_marginTop="190dp"
            android:text="Final Price: - - - - "
            tools:text="Final Price: R$"

            />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:translationZ="10dp"
        app:cardBackgroundColor="#D6D7D7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/AboutButton"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="6dp"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

        <TextView
            android:id="@+id/AboutButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="15dp"
            android:text="About App" />

        <ImageButton
            android:id="@+id/SaveTipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="3dp"
            android:layout_marginRight="9dp"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <TextView
            android:id="@+id/SaveTipButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="43dp"
            android:layout_marginRight="20dp"
            android:text="Save" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>